todo-manifests/logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: logger-namespace
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-dep
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
      name: pingpong-backend
---
apiVersion: v1
kind: Service
metadata:
  namespace: logger-namespace
  name: logger-timestamper-svc
spec:
  type: ClusterIP
  selector:
    app: logger-timestamper-dep
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
      name: logger-backend
