todo-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web-svc
spec:
  selector:
    app: todo-web
  ports:
    - port: 2345
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-server-svc
spec:
  selector:
    app: todo-server
  ports:
    - port: 2346
      targetPort: 3001
