todo-manifests/todo-db.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: todo-db-svc
  labels:
    app: loggter-postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: todo-db-ss
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: todo-namespace
  name: todo-db-ss
spec:
  serviceName: todo-postgres
  replicas: 1
  selector:
    matchLabels:
      app: todo-db-ss
  template:
    metadata:
      labels:
        app: todo-db-ss
    spec:
      containers:
        - name: todo-postgres-ss
          image: postgres:latest
          ports:
            - name: todo-postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
